--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
-{
-  "name": "pt-dame-alam-sejahtera",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+{  
+  "name": "pt-dame-alam-sejahtera",  
+  "version": "1.0.0",  
+  "description": "A project for managing Gantt charts and data visualization.",  
+  "main": "index.js",  
   "scripts": {  
-  "build": "webpack --config webpack.config.js",  
-  "start": "node ./src/index.js"  
+    "build": "webpack --config webpack.config.js",  
+    "start": "node ./src/index.js"  
   },  
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "chart.js": "^4.4.7",
-    "chartjs-adapter-date-fns": "^3.0.0",
-    "chartjs-plugin-annotation": "^3.1.0",
-    "date-fns": "^4.1.0",
-    "express": "^4.21.2"
-  },
-  "devDependencies": {
-    "webpack": "^5.97.1",
-    "webpack-cli": "^6.0.1"
-  }
-}
+  "keywords": [],  
+  "author": "Ferly Apiang",
+  "license": "ISC",  
+  "dependencies": {  
+    "chart.js": "^4.4.7",  
+    "chartjs-adapter-date-fns": "^3.0.0",  
+    "chartjs-plugin-annotation": "^3.1.0",  
+    "date-fns": "^4.1.0",  
+    "express": "^4.21.2"  
+  },  
+  "devDependencies": {  
+    "webpack": "^5.97.1",  
+    "webpack-cli": "^6.0.1"  
+  }  
+}  
